# jupyter-ai-agents

./: .env.azure.example  .eslintrc.js  .gitignore  .licenserc.yaml  .yarnrc.yml  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RELEASE.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js  webpack.lab-config.js
.github/workflows/: build.yml
dev/: README.md
dev/config/: README.md  jupyter_server_config.py
dev/content/: README.md  notebook.ipynb  numpy_examples.ipynb  test.ipynb
dev/sh/: README.md  kill.sh  start-jupyter-server.sh
docs/: .yarnrc.yml  Makefile  PYDANTIC_AI_AGENTS.md  PYDANTIC_IMPLEMENTATION.md  README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/docs/agent-runtimes/: _category_.yaml  index.mdx
docs/docs/agents/: index.mdx
docs/docs/cli/: _category_.yaml  index.mdx
docs/docs/deployments/: index.mdx
docs/docs/install/: _category_.yaml
docs/docs/installation/: _category_.yaml  index.mdx
docs/docs/interactions/: _category_.yaml  index.mdx
docs/docs/models/: _category_.yaml  index.mdx
docs/docs/tools/: index.mdx
docs/docs/ui/: _category_.yaml  index.mdx
docs/docs/usage/: index.mdx
docs/docs/use-cases/: index.mdx
docs/src/components/: HomepageProducts.js
docs/src/css/: custom.css
docs/src/pages/: index2.js
examples/: README.md  __init__.py  agent_example.py  main.py
examples/jupyter-repl/: Makefile  README.md
examples/mcp-repl/: Makefile  README.md  mcp1.py  mcp2.py
examples/simple-mcp/: README.md
jupyter_ai_agent/: agent.py  app.py  consoleapp.py  utils.py
jupyter_ai_agent/agents/: explain_error.py  prompt.py  yagent.py
jupyter_ai_agents/: __init__.py  __version__.py  app.py  base.py  consoleapp.py  extension.py  extension1.py  extension2.py  extension_v1.py  extension_v2.py  serverapplication.py  tools.py  utils.py
jupyter_ai_agents/agents/: __init__.py  agent.py  base.py  base_agent.py  chat_agent.py  config.py  explain_error.py  explain_error_agent.py  mcp.py  models.py  nbmodel_agent.py  nbmodel_runtime_agent.py  prompt.py  prompt_agent.py  utils.py
jupyter_ai_agents/agents/chat/: agent.py  config.py  models.py
jupyter_ai_agents/agents/cli/: __init__.py  prompt_agent.py
jupyter_ai_agents/agents/explain_error/: __init__.py  explain_error_agent.py
jupyter_ai_agents/agents/langchain/: agent_base_runtime.py  agents_manager.py  explain_error_agent.py  models.py  prompt_agent.py
jupyter_ai_agents/agents/prompt/: __init__.py  (+1 more)
jupyter_ai_agents/chat/: __init__.py  agent.py  config.py  handler.py  mcp_tools.py  models.py
jupyter_ai_agents/cli/: __init__.py  app.py  base.py  consoleapp.py  pydantic_app.py  repl.py
jupyter_ai_agents/datalayer/: agents.py
jupyter_ai_agents/fastapi/: agents.py  endpoints.py  main.py
jupyter_ai_agents/handlers/: __init__.py  agents.py  agents_manager.py  base.py  chat.py  chat_handler.py  config.py  configure.py  index.py  mcp.py  nbmodel.py
jupyter_ai_agents/langchain/: __init__.py  anthropic.py  azure_openai.py  langchain_agents.py  openai.py
jupyter_ai_agents/langchains/: __init__.py  bedrock.py  github_copilot.py
jupyter_ai_agents/llm/: __init__.py  anthropic.py  azure_openai.py  bedrock.py  github_copilot.py  openai.py  utils.py
jupyter_ai_agents/models/: __init__.py
jupyter_ai_agents/nbmodel/: __init__.py  agent_base.py  agent_runtime.py  agents_manager.py  explain_error_agent.py  models.py  prompt_agent.py
jupyter_ai_agents/providers/: __init__.py
jupyter_ai_agents/server/: agents.py
jupyter_ai_agents/static/: README.md
jupyter_ai_agents/templates/: index.html
jupyter_ai_agents/tests/: __init__.py  test_agent.py  test_integration_anthropic.py
jupyter_ai_agents/tools/: tools.py
jupyter_ai_agents/utils/: model.py
notes/: BUILD_FIX_SUMMARY.md  LEARNING_FROM_CHAT_EXAMPLE.md  PROGRESS.md  SIDEBAR_AND_API_FIXES.md  WEBPACK_CONFIG.md
public/: index.html
schema/: plugin.json
src/: Chat.tsx  ChatRoot.tsx  ChatWidget.tsx  Part.tsx  css.d.ts  handler.ts  index.ts  svg.d.ts  types.ts  widget.tsx
src/__tests__/: jupyter_ai_agents.spec.ts
src/examples/: Example.tsx  ExampleJupyterLab.tsx
src/hooks/: use-mobile.ts  useJupyterChat.tsx
src/lib/: tool-icons.tsx  utils.ts
src/shadow/: index.tsx  shadow-portal.tsx  shadow-root.tsx  with-portal.tsx
src/theme/: context.tsx  hooks.tsx  index.tsx  provider.tsx  styles.ts  variables.css
style/: base.css  chat.css  index.css  index.js
ui-tests/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/tests/: jupyter_ai_agents.spec.ts
(+102 files in other folders)
