# Copyright (c) 2023-2024 Datalayer, Inc.
#
# BSD 3-Clause License

[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "anyio",
  "datalayer_core",
  "langchain",
  "langchain-openai",
  "langchain-github-copilot",
  "langchain-anthropic",
  "langchain-aws",
  "fastapi",
  "jupyter_kernel_client",
  "jupyter_nbmodel_client",
  "jupyter_server>=2.10,<3",
  "jupyterlab>=4.0.0,<5",
  "pydantic-ai-slim[anthropic,openai,cli]>=1.0.10",
  "pydantic-settings",
  "python-dotenv",
  "sse-starlette>=3.0.2",
  "httpx>=0.25.0",
  "tornado>=6.0",
  "uvicorn",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
example = ["jupyter-server-ydoc"]
test = ["ipykernel", "pytest>=7.0"]
lint = ["mdformat>0.7", "mdformat-gfm>=0.3.5", "ruff"]
typing = ["mypy>=0.990"]

[project.scripts]
jaa = "jupyter_ai_agents.cli.app:main"
jupyter-ai-agents = "jupyter_ai_agents.cli.app:main"
jupyter-ai-agents-console = "jupyter_ai_agents.cli.consoleapp:main"

[project.license]
file = "LICENSE"

[project.entry-points."jupyterlab.extensions"]
jupyter-ai-agents = "jupyter_ai_agents.extension"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_ai_agents/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.hooks.version]
path = "jupyter_ai_agents/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_ai_agents/labextension/static/style.js",
    "jupyter_ai_agents/labextension/package.json",
]
skip-if-exists = ["jupyter_ai_agents/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyter_ai_agents/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_ai_agents/labextension" = "share/jupyter/labextensions/@datalayer/jupyter-ai-agents"
"install.json" = "share/jupyter/labextensions/@datalayer/jupyter-ai-agents/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # FBT001 Boolean positional arg in function definition
  "FBT001",
  "FBT002",
  "FBT003",
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
"jupyter_ai_agents/tests/*" = ["S101"]
